src/test/ui/generics/generic-non-trailing-defaults.stderr
error: generic parameters with a default must be trailing
  --> $DIR/generic-non-trailing-defaults.rs:3:12
   |
LL | struct Vec<A = Heap, T>(A, T);
   |            ^

error: generic parameters with a default must be trailing
  --> $DIR/generic-non-trailing-defaults.rs:6:15
   |
LL | struct Foo<A, B = Vec<C>, C>(A, B, C);
   |               ^

error: aborting due to 2 previous errors

